WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238011
[model] some tests under model-element crash on Big Sur bots
https://bugs.webkit.org/show_bug.cgi?id=238011
Summary
[model] some tests under model-element crash on Big Sur bots
Antoine Quint
Reported
2022-03-17 01:39:27 PDT
[model] some tests under model-element crash on Big Sur bots
Attachments
Patch
(3.69 KB, patch)
2022-03-17 01:41 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch for landing
(3.70 KB, patch)
2022-03-17 01:59 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-03-17 01:41:12 PDT
Created
attachment 454941
[details]
Patch
Antoine Quint
Comment 2
2022-03-17 01:59:24 PDT
Created
attachment 454943
[details]
[fast-cq] Patch for landing
EWS
Comment 3
2022-03-17 02:02:30 PDT
Committed
r291395
(
248525@main
): <
https://commits.webkit.org/248525@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454943
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-03-17 02:03:19 PDT
<
rdar://problem/90418629
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug